--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   shared_preferences: ^2.0.6
   provider: ^5.0.0
   intl: ^0.17.0
+  url_launcher: ^6.0.16
 
 dev_dependencies:
   flutter_test:
